k8s/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hrt-sre-network-policy
  namespace: hrt-sre
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: hrt-sre
    - namespaceSelector:
        matchLabels:
          name: portal
    - namespaceSelector:
        matchLabels:
          name: kube-system
  - ports:
    - protocol: TCP
      port: 3000
    - protocol: TCP
      port: 9090
    - protocol: TCP
      port: 9093
    - protocol: TCP
      port: 8080
  egress:
  - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: portal-network-policy
  namespace: portal
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: hrt-sre
  - ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 8000
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: hrt-sre
  - to: []
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
